<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_areas2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller3movil.areas2">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listado"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TableLayout
        android:id="@+id/tblListar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

            <TextView
                android:id="@+id/lblOperacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operacion" />

            <TextView
                android:id="@+id/lblValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor" />

            <TextView
                android:id="@+id/lblResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultado" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
