<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resultado_cuadrado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller3movil.resultadoCuadrado">

    <TextView
        android:text="@string/cuadrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:theme="@style/Base.V7.ThemeOverlay.AppCompat.Dialog"
        android:animateLayoutChanges="false"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/area"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtResultadoCuadrado"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnOkCuadrado"
            android:textAlignment="center"
            android:onClick="regresar"/>

    </LinearLayout>
</RelativeLayout>
